# dawnloader

./: .gitignore  Dockerfile  Makefile  __main__.py  pyproject.toml
app/: bot.py  service.py
tests/app/: test_service.py
